--- a/package.json
+++ b/package.json
@@ -1,26 +1,33 @@
-  {
+{
     "name": "browsercade",
     "version": "1.0.0",
     "description": "The world's most cursed retro arcade... in your browser!",
     "main": "server.js",
     "scripts": {
-      "start": "node server.js && npx open http://localhost:3000",
-      "dev": "nodemon server.js",
-      "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "node server.js && npx open http://localhost:3000",
+        "dev": "nodemon server.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "dependencies": {
-      "express": "^4.18.2",
-      "socket.io": "^4.7.2",
-      "sqlite3": "^5.1.6",
-      "bcryptjs": "^2.4.3",
-      "express-session": "^1.17.3",
-      "body-parser": "^1.20.2",
-      "cors": "^2.8.5"
+        "bcryptjs": "^2.4.3",
+        "body-parser": "^1.20.2",
+        "cors": "^2.8.5",
+        "express": "^4.18.2",
+        "express-session": "^1.17.3",
+        "multer": "^2.0.1",
+        "socket.io": "^4.7.2",
+        "sqlite3": "^5.1.6"
     },
     "devDependencies": {
-      "nodemon": "^3.0.1"
+        "nodemon": "^3.0.1"
     },
-    "keywords": ["arcade", "games", "retro", "cursed", "html5"],
+    "keywords": [
+        "arcade",
+        "games",
+        "retro",
+        "cursed",
+        "html5"
+    ],
     "author": "Your Name",
     "license": "MIT"
-  }
+}
