--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "express": "^4.18.2",
         "express-session": "^1.17.3",
         "multer": "^2.0.1",
+        "simple-git": "^3.28.0",
         "socket.io": "^4.7.2",
         "sqlite3": "^5.1.6"
     },
