--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "cors": "^2.8.5",
         "express": "^4.18.2",
         "express-session": "^1.17.3",
+        "firebase": "^11.10.0",
+        "firebase-admin": "^13.4.0",
         "multer": "^2.0.1",
         "simple-git": "^3.28.0",
         "socket.io": "^4.7.2",
