--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
     },
     "dependencies": {
         "bcryptjs": "^2.4.3",
-        "body-parser": "^1.20.2",
+        "body-parser": "^1.20.3",
         "cors": "^2.8.5",
-        "express": "^4.18.2",
-        "express-session": "^1.17.3",
+        "express": "^4.21.2",
+        "express-session": "^1.18.1",
         "firebase": "^11.10.0",
         "firebase-admin": "^13.4.0",
         "multer": "^2.0.1",
         "simple-git": "^3.28.0",
-        "socket.io": "^4.7.2",
+        "socket.io": "^4.8.1",
+        "socket.io-client": "^4.8.1",
         "sqlite3": "^5.1.6"
     },
     "devDependencies": {
