--- a/package.json
+++ b/package.json
@@ -10,18 +10,9 @@
     },
     "dependencies": {
         "bcryptjs": "^2.4.3",
-        "body-parser": "^1.20.3",
         "cors": "^2.8.5",
-        "dotenv": "^17.2.0",
         "express": "^4.21.2",
-        "express-session": "^1.18.1",
-        "firebase": "^11.10.0",
-        "firebase-admin": "^13.4.0",
-        "multer": "^2.0.1",
-        "simple-git": "^3.28.0",
-        "socket.io": "^4.8.1",
-        "socket.io-client": "^4.8.1",
-        "sqlite3": "^5.1.6"
+        "socket.io": "^4.8.1"
     },
     "devDependencies": {
         "nodemon": "^3.0.1"
